--- a/src/components/ContactBox.astro
+++ b/src/components/ContactBox.astro
@@ -19,7 +19,7 @@
         Birmingham: 0121 3927529
     </a>
 
-    <hr>
+    <!-- <hr>
 
     <div class="social">
         <a href="#" class="icon instagram" title="Instagram"></a>
@@ -27,7 +27,7 @@
         <a href="#" class="icon facebook" title="Facebook"></a>
 
         <a href="#" class="icon linkedin" title="LinkedIn"></a>
-    </div>
+    </div> -->
 </div>
 
 <style>
