--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -322,6 +322,7 @@ const sectors = await getCollection("sectors");
         text-align: center;
         box-shadow: inset 0 -1.2rem 2rem -1.8rem #fff;
         transition: filter 0.5s ease;
+		text-shadow: 0 0.1rem 0.8rem var(--dark);
     }
 
     header nav .cta:hover {
