--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ import ContactBox from "./ContactBox.astro";
                     <!-- <source media="(min-width:650px)" srcset="/tcn-logo-360.png"> -->
                     <source media="(min-width:850px)" srcset="/logo/tcn-logo-720.webp">
                     <source media="(min-width:300px)" srcset="/logo/tcn-logo-360.webp">
-                    <img src="/logo/tcn-logo-360.png" alt="The Clean Network logo">
+                    <img src="/logo/tcn-logo-360.png" alt="The Clean Network logo" width="207" height="78">
                 </picture>
             </a>
             
