--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,13 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import ContactSection from "../components/ContactSection.astro"
 import ContactBox from "../components/ContactBox.astro";
+import MapSwitch from "../components/MapSwitch.astro";
 
 import { getCollection } from "astro:content";
 
 const services = await getCollection("services");
 const sectors = await getCollection("sectors");
+const testimonials = await getCollection("testimonials");
 ---
 
 <Layout title="The Clean Network - Commercial & Office Cleaning Services" description="COMMERCIAL & OFFICE CLEANING SERVICES The proof is in our numbers. We clean over 500 offices each day with our office cleaning services. 95% of our clients choose to stay with us at the end of their contract. View our Services Request your Quote Rated 5 out of 5 on Google Confidence guaranteed with over">
@@ -29,7 +31,7 @@ const sectors = await getCollection("sectors");
 
 					<div class="bt_ctnr flex">
 						<div class="ctas flex">
-							<a href="/services/" class="know_our_services">Know our Services</a>
+							<a href="/services/" class="know_our_services">Find out more</a>
 
 							<a href="#contact" class="quote">Get a Quote</a>
 						</div>
@@ -96,7 +98,7 @@ const sectors = await getCollection("sectors");
 
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum vel rerum eligendi sunt illum harum id, qui ullam.</p>
 
-					<a href="/services/" class="cta"><span></span> Check all services</a>
+					<a href="/services/" class="cta"><span></span> All services</a>
 
 					<hr>
 
@@ -162,7 +164,7 @@ const sectors = await getCollection("sectors");
 
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum vel rerum eligendi sunt illum harum id, qui ullam.</p>
 
-					<a href="/sectors/" class="cta"><span></span> Check all sectors</a>
+					<a href="/sectors/" class="cta"><span></span> All sectors</a>
 
 					<hr>
 
@@ -200,7 +202,7 @@ const sectors = await getCollection("sectors");
 
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequuntur autem natus, quod deleniti velit esse itaque odit quis expedita.</p>
 
-					<a href="/locations/" class="cta"><span></span> Check our Locations</a>
+					<a href="/locations/" class="cta"><span></span> Our Locations</a>
 				</div>
 
 				<div class="image">
@@ -220,30 +222,37 @@ const sectors = await getCollection("sectors");
 				</div>
 
 				<div class="slider">
-					<div class="box">
-						<picture>
-							<source srcset="/client-testimonials/01.webp">
-							<img src="/client-testimonials/01.jpg" alt="client testimonial" width="320" height="263">
-						</picture>
-					</div>
-					<div class="box">
-						<picture>
-							<source srcset="/client-testimonials/02.webp">
-							<img src="/client-testimonials/02.jpg" alt="client testimonial" width="320" height="263">
-						</picture>
-					</div>
-					<div class="box">
-						<picture>
-							<source srcset="/client-testimonials/03.webp">
-							<img src="/client-testimonials/03.jpg" alt="client testimonial" width="320" height="263">
-						</picture>
-					</div>
-					<div class="box">
-						<picture>
-							<source srcset="/client-testimonials/04.webp">
-							<img src="/client-testimonials/04.jpg" alt="client testimonial" width="320" height="263">
-						</picture>
-					</div>
+					{
+						testimonials.map((testimonials) => (
+							<>
+								<div class="box">
+									<div class="ctnr">
+										<div class="profile">
+											<img src={testimonials.data.avatar}/>
+
+											<div class="flex">
+												<p class="name">{testimonials.data.name}</p>
+
+												<p class="description">{testimonials.data.description}</p>
+											</div>
+										</div>
+										
+										<q>
+											<p class="heading">{testimonials.data.heading}</p>
+											
+											<blockquote>
+												{testimonials.data.paragraph01 == "" ? null : (<p>{testimonials.data.paragraph01}</p>)}
+												
+												{testimonials.data.paragraph02 == "" ? null : (<p>{testimonials.data.paragraph02}</p>)}
+												
+												{testimonials.data.paragraph03 == "" ? null : (<p>{testimonials.data.paragraph03}</p>)}
+											</blockquote>
+										</q>
+									</div>
+								</div>
+							</>
+						))
+					}
 				</div>
 
 				<script>
@@ -284,7 +293,11 @@ const sectors = await getCollection("sectors");
 				</div>
 
 				<div class="map">
-					<iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+					<MapSwitch/>
+
+					<div class="iframe_ctnr">
+						<iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -352,13 +365,14 @@ const sectors = await getCollection("sectors");
 	}
 
 	.intro .bt_ctnr .flex.column {
-    	gap: 0.8rem;
+    	gap: 0.2rem;
 		font-weight: 600;
 		font-size: clamp(1.2rem, 3.5vmin, 1.4rem);
 	}
 
 	.intro .bt_ctnr .flex.column a {
 		line-height: 1;
+		padding: 0.5rem;
 	}
 
 	.intro .bt_ctnr .flex.column span {
@@ -540,8 +554,8 @@ const sectors = await getCollection("sectors");
 	}
 
 	section.testimonials {
-		background-color: var(--primary);
-		color:var(--light);
+		background-color: var(--light-d);
+		color: var(--dark-a);
 		overflow: hidden;
     	padding: clamp(3rem,10vw,5rem) 0 clamp(3rem,12vw,5rem);
 		position:relative;
@@ -559,12 +573,12 @@ const sectors = await getCollection("sectors");
 
 	.testimonials::before {
 		left: 0;
-    	background-image: linear-gradient(90deg, var(--primary-b), transparent);
+    	background-image: linear-gradient(90deg, var(--light), transparent);
 	}
 
 	.testimonials::after {
 		right: 0;
-    	background-image: linear-gradient(-90deg, var(--primary-b), transparent);
+    	background-image: linear-gradient(-90deg, var(--light), transparent);
 	}
 
 	.testimonials > .ctnr {
@@ -577,10 +591,10 @@ const sectors = await getCollection("sectors");
 		font-size: clamp(2rem,7vw,3.6rem);
 		text-align: center;
 		font-weight: 500;
-		background-color: var(--primary-b);
+		/* background-color: var(--primary-b); */
 		width: fit-content;
     	padding: 0.4rem 1rem;
-		margin-bottom: 2rem;
+		margin-bottom: 3rem;
 		max-width: 80vw;
 	}
 
@@ -590,18 +604,128 @@ const sectors = await getCollection("sectors");
 		max-width: var(--mobile-width);
 	}
 
-	.testimonials .slider .box {
+	.testimonials .box {
+    	width: clamp(9rem, 91vw, 84rem);
 		box-sizing: border-box;
-		color: var(--light);
-		/* transition: opacity 1.5s ease; */
 		margin-inline: auto;
+		line-height: 1.3;
 	}
 
-	.testimonials .slider img {
+	.testimonials .box > .ctnr {
+		margin-inline: clamp(2rem,5vw,10rem);
+		border-radius: 3rem;
+		padding: clamp(2rem,8vmin,4rem) clamp(2rem,6vmin,4rem);
+		background-color: var(--light);
+		position:relative;
+	}
+
+	.testimonials .box > .ctnr::after, .testimonials .box > .ctnr::before {
+		content: "";
+		position: absolute;
+    	z-index: 2;
+	}
+
+	.testimonials .box > .ctnr::after {
+		top: -1.3rem;
+		left: -1.3rem;
+		width: 5rem;
+		height: 11rem;
+		border-top: 0.4rem solid var(--primary);
+		border-left: 0.4rem solid var(--primary);
+		border-radius: 4rem 0 0 0;
+	}
+
+	.testimonials .box > .ctnr::before {
+		bottom: -1.3rem;
+		right: -1.3rem;
+		width: 11rem;
+		height: 5rem;
+		border-bottom: 0.4rem solid var(--primary);
+		border-right: 0.4rem solid var(--primary);
+		border-radius: 0 0 4rem 0;
+	}
+
+	.testimonials .profile {
+		display: flex;
+		flex-direction: revert;
+		align-items: center;
+		margin-bottom: 2rem;
+		font-size: 2.3rem;
+		gap: 1.5rem;
+		/* justify-content: center; */
+		position: relative;
+		left: 0;
+		z-index: 3;
+	}
+
+	.testimonials .name {
+		font-size: 1em;
+    	font-weight: 600;
+	}
+
+	.testimonials .description {
+    	font-size: 0.7em;
+	}
+
+	.testimonials .profile img {
+		width: clamp(7rem, 9vw, 10rem);
+		height: clamp(7rem, 9vw, 10rem);
+		border-radius: 50%;
+		border: 0.3rem solid var(--light-a);
+	}
+
+	.testimonials .profile .flex {
+    	flex-direction: column;
+	}
+
+	.testimonials q {
+		position: relative;
+	}
+
+	.testimonials q::before, .testimonials q::after {
+		font-size: clamp(7rem,50vmin,25rem);
+		line-height: 1;
+		position: absolute;
+		color: var(--light-a);
+		z-index: 1;
+	}
+
+	.testimonials q::before {
+		left: -5rem;
+		transform: translateY(-5rem);
+	}
+
+	.testimonials q::after {
+		right: 0;
+    	transform: translateY(-1rem);
+	}
+
+	.testimonials .heading {
+		font-size: clamp(1.8rem,4.6vmin,2.3rem);
+		margin-bottom: 1rem;
+		color: var(--dark);
+		font-weight: 600;
+	}
+
+	.testimonials .heading, .testimonials .description {
+		position: relative;
+		z-index: 3;
+	}
+
+	.testimonials blockquote {
+		margin: unset;
+		font-size: clamp(1.6rem,3vmin,1.8rem);
+		color: var(--dark-a);
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		line-height: 1.5;
+	}
+
+	/* .testimonials .slider img {
     	width: clamp(26rem, 80vw, 32rem);
 		border-radius: 0.9rem;
-		margin:0 1rem;
-	}
+	} */
 
 	.slider .tns-controls {
 		display: flex;
@@ -694,27 +818,17 @@ const sectors = await getCollection("sectors");
 	.find_us .map {
 		flex: 1;
 		display: flex;
+    	flex-direction: column;
 		align-items: center;
 	}
 
-	.find_us .map iframe {
-		width: clamp(10rem,85vmin,55rem);
-		height: clamp(10rem,85vmin,55rem);
-		display: flex;
-		margin: 0 auto 7rem;
-		border-radius: 2rem;
-		/* border: 0.2rem solid var(--primary); */
-		background-color: var(--primary);
-        background-image: url(/textures/dot-grid.jpg);
-        background-image: image-set(url(/textures/dot-grid.jpg) , url(/textures/dot-grid.webp) );
-        background-size: 40rem;
+	.find_us .iframe_ctnr {
+    	margin: 2rem 0 7rem;
 	}
 
 	.find_us .content {
 
 	}
-
-
 
 
 
@@ -769,6 +883,10 @@ const sectors = await getCollection("sectors");
 		.panel.find_us .content {
 			margin: unset;
     		max-width: clamp(40rem,33vw,95rem);
+		}
+
+		.find_us .iframe_ctnr {
+			margin-bottom: unset;
 		}
 
 	}
