--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -6,6 +6,7 @@ import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
 import ContactSection from "../../components/ContactSection.astro"
 import ContactBox from '../../components/ContactBox.astro';
+import MapSwitch from '../../components/MapSwitch.astro';
 
 const { description } = Astro.props;
 ---
@@ -23,6 +24,10 @@ const { description } = Astro.props;
                 <h1>Our Locations</h1>
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit molestias quo id molestiae fuga esse nemo perspiciatis.</p>
+                
+                <div class="component_ctnr">
+                    <MapSwitch/>
+                </div>
             </div>
 
             <div class="map">
@@ -30,7 +35,9 @@ const { description } = Astro.props;
                     <ContactBox />
                 </div>
                 
-                <iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                <div class="iframe_ctnr">
+                    <iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                </div>
             </div>
 
             <ContactSection />
@@ -71,27 +78,37 @@ const { description } = Astro.props;
         letter-spacing: 0.2rem;
     }
 
-    .map iframe {
-        position:relative;
-        z-index: 2;
-    }
-
     .contact_box_ctnr {
         color: var(--light);
-        background-color: rgb(16 106 166 / 91%);
+        background-color: rgb(47 54 60 / 90%);
         backdrop-filter: blur(0.3rem);
         position: absolute;
-        top: clamp(2rem, 5vmin, 5rem);
+        top: clamp(2rem,9vmin,5rem);
         z-index: 3;
-        right: clamp(2rem, 5vmin, 5rem);
+        right: clamp(2rem,6vmin,5rem);
         margin-inline: auto;
         width: fit-content;
         padding: 2rem 3rem;
         border-radius: 0.6rem;
-        border: 0.1rem solid var(--primary-b);
         transform: scale(0.8);
         transform-origin: top right;
-        box-shadow: 0 2.3rem 1.5rem -2rem var(--primary-a), inset 0 1.5rem 2rem -2rem;
+    }
+
+    .iframe_ctnr {
+        position: relative;
+        z-index: 2;
+        height: 100%;
+    }
+
+    .component_ctnr {
+        display: flex;
+        transform: translateY(50%);
+        position: relative;
+        z-index: 3;
+    }
+
+    .heading_ctnr {
+        padding-bottom: unset;
     }
 
     @media screen and (min-width:850px) {
@@ -101,9 +118,8 @@ const { description } = Astro.props;
             border-top: unset;
         }
 
-        .map iframe {
+        .iframe_ctnr {
             border: 0.8rem solid var(--light);
-            box-sizing: border-box;
         }
 
         .contact_box_ctnr {
