--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -276,9 +276,8 @@ hr {
 }
 
 .panel .subsets a:not(.heading) {
-    margin-right: 0.7rem;
+    margin: 0.4rem 0.7rem 0.4rem 0;
     padding: 0 0.6rem;
-    line-height: 1.9;
     transition: background-color 0.4s ease;
     -webkit-transition: background-color 0.4s ease;
     -moz-transition: background-color 0.4s ease;
@@ -289,6 +288,7 @@ hr {
     -moz-border-radius: 0.3rem;
     -ms-border-radius: 0.3rem;
     -o-border-radius: 0.3rem;
+    display: inline-block;
 }
 
 .panel .subsets a:not(.heading):hover {
@@ -300,19 +300,20 @@ hr {
     -o-transition: background-color 0s ease;
 }
 
-/* .panel .subsets a:not(.heading):not(:last-child):after {
-    content: "";
-    position: relative;
-    width: 0.3rem;
-    height: 0.3rem;
-    display: inline-block;
-    background-color: var(--light-b);
-    border-radius: 1rem;
-    margin: 0 0.4rem;
-    transform: translateY(-100%);
-} */
 
+/* Map switcher fix */
 
+.find_us .map iframe {
+    width: clamp(10rem,85vmin,55rem);
+    height: clamp(10rem,85vmin,55rem);
+    display: flex;
+    border-radius: 2rem;
+    /* border: 0.2rem solid var(--primary); */
+    background-color: var(--primary);
+    background-image: url(/textures/dot-grid.jpg);
+    background-image: image-set(url(/textures/dot-grid.jpg), url(/textures/dot-grid.webp));
+    background-size: 40rem;
+}
 
 
 
