--- a/src/components/ContactBox.astro
+++ b/src/components/ContactBox.astro
@@ -44,6 +44,12 @@
         gap:1rem;
         align-items: center;
         width: fit-content;
+        transition: opacity 0.4s ease;
+    }
+
+    .contact_box a:hover {
+        opacity: 0.6;
+        transition: opacity 0s ease;
     }
     
     .contact_box a .icon {
