--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -20,7 +20,7 @@ const { description } = Astro.props;
         <main>
             <section class="panel">
                 <div class="ctnr">
-                    <div class="content">
+                    <div class="content reveal">
                         <h1>About <strong>The Clean Network</strong></h1>
     
                         <h2>Confidence guaranteed with over 25 years of experience.</h2>
@@ -63,7 +63,7 @@ const { description } = Astro.props;
                         </ul>
                     </div>
 
-                    <div class="image">
+                    <div class="image reveal">
                         <!-- <picture>
                             <source srcset="/images/office01.webp">
                             <img src="/images/office01.jpg" alt="The Clean Network logo">
