--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -35,7 +35,7 @@ import "../../styles/collections.css"
                         {
                             sectors.map((sectors) => (
                                 <>
-                                <section class="panel service_box">
+                                <section class="panel reveal">
                                         <div class="ctnr">
                                             <div class="content">
                                                 <h3>
