--- a/src/pages/services/[...slug].astro
+++ b/src/pages/services/[...slug].astro
@@ -35,7 +35,7 @@ import "../../styles/posts.css"
     
     </section>
 
-    <article>
+    <article class="reveal">
         <Content />
 
         <a href="/contact/" class="cta" aria-label="Get a free quote for our cleaning services">Get a free quote</a>
