--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -38,7 +38,7 @@ import "../../styles/collections.css"
                             services.map((services) => (
                                 <>
                                 {services.data.type === "indoor" ? (
-                                <section class="panel service_box">
+                                <section class="panel reveal">
                                         <div class="ctnr">
                                             <div class="content">
                                                 <h3>
@@ -75,7 +75,7 @@ import "../../styles/collections.css"
                             services.map((services) => (
                                 <>
                                 {services.data.type === "external" ? (
-                                <section class="panel service_box">
+                                <section class="panel reveal">
                                         <div class="ctnr">
                                             <div class="content">
                                                 <h3>
