--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,11 +15,12 @@ const testimonials = await getCollection("testimonials");
 ---
 
 <Layout title="The Clean Network - Commercial & Office Cleaning Services" description="COMMERCIAL & OFFICE CLEANING SERVICES The proof is in our numbers. We clean over 500 offices each day with our office cleaning services. 95% of our clients choose to stay with us at the end of their contract. View our Services Request your Quote Rated 5 out of 5 on Google Confidence guaranteed with over">
+
 	<Header />
 	<main>
 		<section class="intro default_bg">
 			<div class="ctnr">
-				<div class="content">
+				<div class="content reveal">
 					<h1>Commercial and Office Cleaning Services</h1>
 
 					<h2>
@@ -45,7 +46,7 @@ const testimonials = await getCollection("testimonials");
 					</div>
 				</div>
 
-				<div class="showcase">
+				<div class="showcase reveal">
 					<picture>
 						<source media="(min-width:850px)" srcset="/images/office01.webp">
 						<source srcset="/images/office01-min.webp">
@@ -54,7 +55,7 @@ const testimonials = await getCollection("testimonials");
 				</div>
 			</div>
 
-			<div class="text_block">
+			<div class="text_block reveal">
 				<div class="ctnr">
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -67,7 +68,7 @@ const testimonials = await getCollection("testimonials");
 			</div>
 		</section>
 
-		<section class="clients">
+		<section class="clients reveal">
 			<div class="ctnr">
 				<h3>Our clients include...</h3>
 
@@ -93,7 +94,7 @@ const testimonials = await getCollection("testimonials");
 
 		<section class="services panel">
 			<div class="ctnr">
-				<div class="content">
+				<div class="content reveal">
 					<h3>Services</h3>
 
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum vel rerum eligendi sunt illum harum id, qui ullam.</p>
@@ -147,7 +148,7 @@ const testimonials = await getCollection("testimonials");
 					</div>
 				</div>
 
-				<div class="image">
+				<div class="image reveal">
 					<picture>
 						<source media="(min-width:850px)" srcset="/images/office02.webp">
 						<source srcset="/images/office02-min.webp">
@@ -159,7 +160,7 @@ const testimonials = await getCollection("testimonials");
 
 		<section class="sectors panel">
 			<div class="ctnr">
-				<div class="content">
+				<div class="content reveal">
 					<h3>Sectors</h3>
 
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum vel rerum eligendi sunt illum harum id, qui ullam.</p>
@@ -185,7 +186,7 @@ const testimonials = await getCollection("testimonials");
 					</div>
 				</div>
 
-				<div class="image">
+				<div class="image reveal">
 					<picture>
 						<source media="(min-width:850px)" srcset="/images/office03.webp">
 						<source srcset="/images/office03-min.webp">
@@ -197,7 +198,7 @@ const testimonials = await getCollection("testimonials");
 
 		<section class="locations panel" id="locations">
 			<div class="ctnr">
-				<div class="content">
+				<div class="content reveal">
 					<h3>Locations</h3>
 
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequuntur autem natus, quod deleniti velit esse itaque odit quis expedita.</p>
@@ -205,7 +206,7 @@ const testimonials = await getCollection("testimonials");
 					<a href="/locations/" class="cta"><span></span> Our Locations</a>
 				</div>
 
-				<div class="image">
+				<div class="image reveal">
 					<picture>
 						<source media="(min-width:850px)" srcset="/images/customer01.webp">
 						<source srcset="/images/customer01-min.webp">
@@ -221,6 +222,8 @@ const testimonials = await getCollection("testimonials");
 					<h3>What our clients have been saying</h3>
 				</div>
 
+				<div class="quotes"></div>
+
 				<div class="slider">
 					{
 						testimonials.map((testimonials) => (
@@ -228,7 +231,7 @@ const testimonials = await getCollection("testimonials");
 								<div class="box">
 									<div class="ctnr">
 										<div class="profile">
-											<img src={testimonials.data.avatar}/>
+											<img src={testimonials.data.avatar} alt={`${testimonials.data.name}'s avatar'`}/>
 
 											<div class="flex">
 												<p class="name">{testimonials.data.name}</p>
@@ -237,7 +240,7 @@ const testimonials = await getCollection("testimonials");
 											</div>
 										</div>
 										
-										<q>
+										<div class="content">
 											<p class="heading">{testimonials.data.heading}</p>
 											
 											<blockquote>
@@ -247,7 +250,9 @@ const testimonials = await getCollection("testimonials");
 												
 												{testimonials.data.paragraph03 == "" ? null : (<p>{testimonials.data.paragraph03}</p>)}
 											</blockquote>
-										</q>
+
+											<div class="gradient"></div>
+										</div>
 									</div>
 								</div>
 							</>
@@ -276,7 +281,7 @@ const testimonials = await getCollection("testimonials");
 
 		<section class="find_us panel">
 			<div class="ctnr">
-				<div class="content">
+				<div class="content reveal">
 					<h3>Find us</h3>
 
 					<p>We’re based in the City of London & Birmingham City Centre so if you’d like us to pop over and give you a quote contact us using our details below. You’re also more than welcome to drop by our office too of course.</p>
@@ -292,7 +297,7 @@ const testimonials = await getCollection("testimonials");
 					<ContactBox />
 				</div>
 
-				<div class="map">
+				<div class="map reveal">
 					<MapSwitch/>
 
 					<div class="iframe_ctnr">
@@ -302,6 +307,7 @@ const testimonials = await getCollection("testimonials");
 			</div>
 		</section>
 	</main>
+	
 	<Footer />
 </Layout>
 
@@ -336,27 +342,27 @@ const testimonials = await getCollection("testimonials");
 	}
 
 	.intro .bt_ctnr {
-		flex-flow: row wrap;
+		flex-direction: column;
     	gap: 1.6rem;
-		align-items: center;
 	}
 
 	.intro .ctas {
 		gap: 1.4rem;
 		color: var(--light);
 		font-weight: 500;
-		font-size: clamp(1.3rem, 3.6vmin, 1.7rem);
+		font-size: clamp(1.3rem,4vmin,1.8rem);
 		line-height: 1;
-    	margin-top: 0.5rem;
+		margin-top: 0.5rem;
+		letter-spacing: 0.04rem;
 	}
 
 	.ctas a {
 		border-radius: 0.4rem;
-		padding: 1.3rem 1.9rem;
+		padding: 1.4rem 2rem;
 		border: 0.2rem solid var(--light);
     	box-shadow: inset 0 -1.2rem 1.5rem -1.5rem, 0 0.8rem 1rem -0.6rem var(--light-b);
 		transition: filter 0.5s ease;
-		text-shadow: 0 0.1rem 0.8rem var(--dark);
+		text-shadow: 0 0.1rem 0.4rem var(--dark);
 	}
 
 	.ctas a:hover {
@@ -367,12 +373,18 @@ const testimonials = await getCollection("testimonials");
 	.intro .bt_ctnr .flex.column {
     	gap: 0.2rem;
 		font-weight: 600;
-		font-size: clamp(1.2rem, 3.5vmin, 1.4rem);
+    	font-size: clamp(1.2rem,3.8vmin,1.6rem);
 	}
 
 	.intro .bt_ctnr .flex.column a {
 		line-height: 1;
 		padding: 0.5rem;
+		transition: opacity 0.4s ease;
+	}
+
+	.intro .bt_ctnr .flex.column a:hover {
+		opacity: 0.7;
+		transition: opacity 0s ease;
 	}
 
 	.intro .bt_ctnr .flex.column span {
@@ -465,7 +477,7 @@ const testimonials = await getCollection("testimonials");
 
 	section.services {
 		width: 100%;
-		background-color: var(--light-a);
+		background-color: var(--light-d);
 		color: var(--primary-a);
 	}
 
@@ -557,7 +569,7 @@ const testimonials = await getCollection("testimonials");
 		background-color: var(--light-d);
 		color: var(--dark-a);
 		overflow: hidden;
-    	padding: clamp(3rem,10vw,5rem) 0 clamp(3rem,12vw,5rem);
+    	padding: clamp(3rem,10vw,6rem) 0 clamp(3rem,12vw,8rem);
 		position:relative;
 	}
 
@@ -566,8 +578,8 @@ const testimonials = await getCollection("testimonials");
 		position:absolute;
 		top:0;
 		bottom:0;
-		width: clamp(2rem,11vw,10rem);
-		opacity: 0.6;
+		width: clamp(2rem,12vw, calc((100vw - var(--mobile-width)) / 2));
+		opacity: 0.8;
     	z-index: 1;
 	}
 
@@ -588,14 +600,16 @@ const testimonials = await getCollection("testimonials");
 
 	.testimonials h3 {
 		margin-inline: auto;
-		font-size: clamp(2rem,7vw,3.6rem);
+		font-size: clamp(2rem,7vw,4rem);
 		text-align: center;
-		font-weight: 500;
-		/* background-color: var(--primary-b); */
+		font-weight: 600;
 		width: fit-content;
-    	padding: 0.4rem 1rem;
+		padding: 0.4rem 1rem;
 		margin-bottom: 3rem;
 		max-width: 80vw;
+		position: relative;
+		z-index: 4;
+		color: var(--primary-a);
 	}
 
 	.slider {
@@ -604,8 +618,41 @@ const testimonials = await getCollection("testimonials");
 		max-width: var(--mobile-width);
 	}
 
+	.quotes {
+		position: absolute;
+		width: clamp(9rem,95vw,77rem);
+		height: clamp(80%, 172vw, 85%);
+		bottom: 3%;
+		left: 0;
+		right: 0;
+		margin-inline: auto;
+		z-index: 2;
+	}
+
+	.quotes::after, .quotes::before {
+		content: "";
+		position: absolute;
+		width: clamp(5rem, 16vw, 15rem);
+		height: clamp(5rem, 16vw, 15rem);
+		background-image: url(/icons/quote.svg);
+		background-size: contain;
+		background-position: center;
+		background-repeat: no-repeat;
+	}
+
+	.quotes::before {
+		left:0;
+		top:0;
+	}
+
+	.quotes::after {
+		right:0;
+		bottom:0;
+		transform: rotate(180deg);
+	}
+
 	.testimonials .box {
-    	width: clamp(9rem, 91vw, 84rem);
+    	width: clamp(9rem, 95vw, 78rem);
 		box-sizing: border-box;
 		margin-inline: auto;
 		line-height: 1.3;
@@ -613,26 +660,10 @@ const testimonials = await getCollection("testimonials");
 
 	.testimonials .box > .ctnr {
 		margin-inline: clamp(2rem,5vw,10rem);
-		border-radius: 3rem;
+		border-radius: 2rem;
 		padding: clamp(2rem,8vmin,4rem) clamp(2rem,6vmin,4rem);
 		background-color: var(--light);
 		position:relative;
-	}
-
-	.testimonials .box > .ctnr::after, .testimonials .box > .ctnr::before {
-		content: "";
-		position: absolute;
-    	z-index: 2;
-	}
-
-	.testimonials .box > .ctnr::after {
-		top: -1.3rem;
-		left: -1.3rem;
-		width: 5rem;
-		height: 11rem;
-		border-top: 0.4rem solid var(--primary);
-		border-left: 0.4rem solid var(--primary);
-		border-radius: 4rem 0 0 0;
 	}
 
 	.testimonials .box > .ctnr::before {
@@ -661,10 +692,12 @@ const testimonials = await getCollection("testimonials");
 	.testimonials .name {
 		font-size: 1em;
     	font-weight: 600;
+    	color: var(--primary-a);
 	}
 
 	.testimonials .description {
     	font-size: 0.7em;
+    	color: var(--grey);
 	}
 
 	.testimonials .profile img {
@@ -678,8 +711,34 @@ const testimonials = await getCollection("testimonials");
     	flex-direction: column;
 	}
 
-	.testimonials q {
+	.testimonials .box .content {
 		position: relative;
+		max-height: clamp(10rem, 55vh, 50rem);
+    	max-height: clamp(10rem, 55svh, 50rem);
+		overflow-y: auto;
+		display: block;
+    	padding-right: clamp(1rem, 2vmin, 3rem);
+	}
+
+	.testimonials .box .content::-webkit-scrollbar {
+		width:0.9rem;
+	}
+
+	.testimonials .box .content::-webkit-scrollbar-thumb {
+		background-color: var(--light-a);
+		border-radius: 1rem;
+	}
+
+	.testimonials .box .ctnr:hover .content::-webkit-scrollbar-thumb, .testimonials .box .content::-webkit-scrollbar-thumb:hover {
+		background-color: var(--light-b);
+	}
+
+	.testimonials .box .gradient {
+		position: sticky;
+		bottom: -0.2rem;
+		width: 100%;
+		height: 3rem;
+		background-image: linear-gradient(0deg, var(--light) 15%, transparent);
 	}
 
 	.testimonials q::before, .testimonials q::after {
@@ -701,10 +760,11 @@ const testimonials = await getCollection("testimonials");
 	}
 
 	.testimonials .heading {
-		font-size: clamp(1.8rem,4.6vmin,2.3rem);
+		font-size: clamp(1.8rem,4.8vmin,2.5rem);
 		margin-bottom: 1rem;
-		color: var(--dark);
-		font-weight: 600;
+		color: var(--primary-a);
+		font-weight: 400;
+		line-height: 1.4;
 	}
 
 	.testimonials .heading, .testimonials .description {
@@ -714,7 +774,7 @@ const testimonials = await getCollection("testimonials");
 
 	.testimonials blockquote {
 		margin: unset;
-		font-size: clamp(1.6rem,3vmin,1.8rem);
+		font-size: clamp(1.5rem,3.6vmin,1.7rem);
 		color: var(--dark-a);
 		display: flex;
 		flex-direction: column;
@@ -823,7 +883,7 @@ const testimonials = await getCollection("testimonials");
 	}
 
 	.find_us .iframe_ctnr {
-    	margin: 2rem 0 7rem;
+    	margin: 1.5rem 0 7rem;
 	}
 
 	.find_us .content {
@@ -842,7 +902,7 @@ const testimonials = await getCollection("testimonials");
 		}
 
 		.intro > .ctnr .content {
-			margin: clamp(3rem,9vw,13rem) auto clamp(3rem,9vw,13rem) 0;
+			margin: clamp(3rem,9vw,9rem) auto clamp(3rem,9vw,9rem) 0;
 			width: unset;
 			max-width: clamp(40rem, 46vw, 85rem);
 		}
@@ -868,8 +928,20 @@ const testimonials = await getCollection("testimonials");
 			display: flex;
 		}
 
+		section.sectors {
+    		margin: 0.6rem 0;
+		}
+
+		.testimonials::before, .testimonials::after {
+			z-index: 3;
+		}
+
+		.testimonials .box {
+			max-width: 62vw;
+		}
+
 		.find_us .map {
-    		margin: 6rem 0;
+    		margin: 4rem 0;
 		}
 
 		.find_us .map iframe {
@@ -883,6 +955,7 @@ const testimonials = await getCollection("testimonials");
 		.panel.find_us .content {
 			margin: unset;
     		max-width: clamp(40rem,33vw,95rem);
+    		/* padding: clamp(3rem,10vmin,6rem) 0 clamp(3rem,12vmin,6rem); */
 		}
 
 		.find_us .iframe_ctnr {
