--- a/src/styles/tiny-slider.css
+++ b/src/styles/tiny-slider.css
@@ -1,5 +1,7 @@
 .tns-outer {
-    padding: 0 !important
+    padding: 0 !important;
+    position: relative;
+    z-index: 3;
 }
 
 .tns-outer [hidden] {
@@ -90,8 +92,16 @@
 .tns-controls {
     display: flex;
     justify-content: center;
-    gap:1.5rem;
-    margin-top: 2rem;
+    gap: 2rem;
+    margin: 0 auto;
+    right: 0;
+    left: 0;
+    z-index: 3;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
 }
 
 .tns-controls button {
@@ -100,14 +110,17 @@
     border-radius: 0.4rem;
     font-weight: 800;
     color: var(--light);
-    width: 3.5rem;
-    height: 3.5rem;
+    width: clamp(3.5rem, 12vw, 5rem);
+    height: clamp(3.5rem, 4vw, 5rem);
+    z-index: 3;
+    border: 0.1rem solid var(--primary);
 }
 
 .tns-controls button[disabled] {
-    background-color: var(--light-b);
-    color:var(--light);
+    background-color: var(--light-a);
+    color: var(--light-b);
     cursor: default;
+    border: 0.1rem solid var(--light-b);
 }
 
 .tns-lazy-img.tns-complete {
@@ -184,4 +197,71 @@
     width: calc(100% / 70);
     height: 10px;
     float: left
+}
+
+@media screen and (min-width: 850px) {
+
+    .tns-controls {
+        transform: translateY(0%);
+        -webkit-transform: translateY(0%);
+        -moz-transform: translateY(0%);
+        -ms-transform: translateY(0%);
+        -o-transform: translateY(0%);
+        display: unset;
+}
+
+    .tns-controls button {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        height: 20rem;
+        width: clamp(3.5rem, 4vw, 10rem);
+        z-index: 4;
+}
+
+    .tns-controls button:first-of-type {
+        left: calc((100vw - var(--mobile-width)) / 2);
+        /* border-radius: 0 2rem 2rem 0;
+        -webkit-border-radius: 0 2rem 2rem 0;
+        -moz-border-radius: 0 2rem 2rem 0;
+        -ms-border-radius: 0 2rem 2rem 0;
+        -o-border-radius: 0 2rem 2rem 0; */
+}
+    
+    .tns-controls button:last-of-type {
+        right: calc((100vw - var(--mobile-width)) / 2);
+        /* border-radius: 2rem 0 0 2rem;
+        -webkit-border-radius: 2rem 0 0 2rem;
+        -moz-border-radius: 2rem 0 0 2rem;
+        -ms-border-radius: 2rem 0 0 2rem;
+        -o-border-radius: 2rem 0 0 2rem; */
+}
+
+    .tns-controls button {
+        background-color:rgb(46 163 242 / 70%);
+        backdrop-filter: blur(0.4rem);
+        border-radius: 0.8rem;
+        -webkit-border-radius: 0.8rem;
+        -moz-border-radius: 0.8rem;
+        -ms-border-radius: 0.8rem;
+        -o-border-radius: 0.8rem;
+        transition: background-color 0.3s ease;
+        -webkit-transition: background-color 0.3s ease;
+        -moz-transition: background-color 0.3s ease;
+        -ms-transition: background-color 0.3s ease;
+        -o-transition: background-color 0.3s ease;
+}
+
+    .tns-controls button:not([disabled]):hover {
+        background-color:var(--primary-b);
+        transition: background-color 0.1s ease;
+        -webkit-transition: background-color 0.1s ease;
+        -moz-transition: background-color 0.1s ease;
+        -ms-transition: background-color 0.1s ease;
+        -o-transition: background-color 0.1s ease;
+}
 }
