--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -285,7 +285,7 @@ const sectors = await getCollection("sectors");
 
     header nav {
         width: calc(100% - (100% - var(--mobile-width)) / 2);
-        background-color: var(--light-d);
+        background-color: rgb(230 238 255 / 94%);
         font-size: clamp(1.6rem,5vw,2.2rem);
         backdrop-filter: blur(0.5rem);
         border-radius: 0 0 0 1.4rem;
