--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -31,6 +31,8 @@ const { description } = Astro.props;
             </div>
 
             <div class="map">
+                <noscript>You need to enable JavaScript on your browser to see this content.</noscript>
+
                 <div class="contact_box_ctnr reveal">
                     <ContactBox />
                 </div>
