--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -27,6 +27,8 @@
 
             <p>
                 <button type="submit" aria-label="Submit contact form">Request a quote</button>
+						
+                <noscript>You need to enable JavaScript on your browser to submit emails.</noscript>
             </p>
             </form>
     </div>
