--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -224,6 +224,11 @@ const testimonials = await getCollection("testimonials");
 
 				<div class="quotes"></div>
 
+				<script>
+					import "../scripts/tiny-slider.js"
+					import "../styles/tiny-slider.css"
+				</script>
+
 				<div class="slider">
 					{
 						testimonials.map((testimonials) => (
@@ -259,11 +264,6 @@ const testimonials = await getCollection("testimonials");
 						))
 					}
 				</div>
-
-				<script>
-					import "../scripts/tiny-slider.js"
-					import "../styles/tiny-slider.css"
-				</script>
 			</div>
 		</section>
 
@@ -301,6 +301,8 @@ const testimonials = await getCollection("testimonials");
 					<MapSwitch/>
 
 					<div class="iframe_ctnr">
+						<noscript>You need to enable JavaScript on your browser to see this content.</noscript>
+
 						<iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
 					</div>
 				</div>
@@ -405,7 +407,8 @@ const testimonials = await getCollection("testimonials");
 	}
 
 	.showcase img {
-		height: clamp(30rem, 70vw, 60rem);
+		height: clamp(30rem,129vmin,60rem);
+		max-height: 35vh;
 		width: 100%;
 		object-fit: cover;
 		object-position: center;
@@ -566,10 +569,10 @@ const testimonials = await getCollection("testimonials");
 	}
 
 	section.testimonials {
-		background-color: var(--light-d);
+		background-color: var(--light);
 		color: var(--dark-a);
 		overflow: hidden;
-    	padding: clamp(3rem,10vw,6rem) 0 clamp(3rem,12vw,8rem);
+    	padding: clamp(3rem,10vw,6rem) 0 clamp(3rem,8vw,6rem);
 		position:relative;
 	}
 
@@ -600,16 +603,16 @@ const testimonials = await getCollection("testimonials");
 
 	.testimonials h3 {
 		margin-inline: auto;
-		font-size: clamp(2rem,7vw,4rem);
+		font-size: clamp(2rem,6.2vw,3.2rem);
 		text-align: center;
-		font-weight: 600;
+		font-weight: 500;
 		width: fit-content;
 		padding: 0.4rem 1rem;
 		margin-bottom: 3rem;
-		max-width: 80vw;
+		max-width: 58vw;
 		position: relative;
 		z-index: 4;
-		color: var(--primary-a);
+		color: var(--highlight);
 	}
 
 	.slider {
@@ -620,9 +623,9 @@ const testimonials = await getCollection("testimonials");
 
 	.quotes {
 		position: absolute;
-		width: clamp(9rem,95vw,77rem);
-		height: clamp(80%, 172vw, 85%);
-		bottom: 3%;
+		width: clamp(9rem,91vw,77rem);
+		height: clamp(60%,141vw,81%);
+		bottom: 2%;
 		left: 0;
 		right: 0;
 		margin-inline: auto;
@@ -632,8 +635,8 @@ const testimonials = await getCollection("testimonials");
 	.quotes::after, .quotes::before {
 		content: "";
 		position: absolute;
-		width: clamp(5rem, 16vw, 15rem);
-		height: clamp(5rem, 16vw, 15rem);
+		width: clamp(5rem,16vw,10rem);
+		height: clamp(5rem,16vw,10rem);
 		background-image: url(/icons/quote.svg);
 		background-size: contain;
 		background-position: center;
@@ -652,7 +655,7 @@ const testimonials = await getCollection("testimonials");
 	}
 
 	.testimonials .box {
-    	width: clamp(9rem, 95vw, 78rem);
+    	width: clamp(9rem, 95vw, 75rem);
 		box-sizing: border-box;
 		margin-inline: auto;
 		line-height: 1.3;
@@ -661,8 +664,8 @@ const testimonials = await getCollection("testimonials");
 	.testimonials .box > .ctnr {
 		margin-inline: clamp(2rem,5vw,10rem);
 		border-radius: 2rem;
-		padding: clamp(2rem,8vmin,4rem) clamp(2rem,6vmin,4rem);
-		background-color: var(--light);
+		padding: clamp(2rem,8vmin,4rem) clamp(2rem,6vmin,4rem) 1rem;
+		background-color: var(--light-d);
 		position:relative;
 	}
 
@@ -738,7 +741,7 @@ const testimonials = await getCollection("testimonials");
 		bottom: -0.2rem;
 		width: 100%;
 		height: 3rem;
-		background-image: linear-gradient(0deg, var(--light) 15%, transparent);
+		background-image: linear-gradient(0deg,var(--light-d) 15%,transparent);
 	}
 
 	.testimonials q::before, .testimonials q::after {
@@ -884,6 +887,10 @@ const testimonials = await getCollection("testimonials");
 
 	.find_us .iframe_ctnr {
     	margin: 1.5rem 0 7rem;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+    	align-items: center;
 	}
 
 	.find_us .content {
@@ -902,7 +909,7 @@ const testimonials = await getCollection("testimonials");
 		}
 
 		.intro > .ctnr .content {
-			margin: clamp(3rem,9vw,9rem) auto clamp(3rem,9vw,9rem) 0;
+			margin: clamp(3rem,9vmin,9rem) auto clamp(3rem,9vmin,9rem) 0;
 			width: unset;
 			max-width: clamp(40rem, 46vw, 85rem);
 		}
@@ -923,13 +930,16 @@ const testimonials = await getCollection("testimonials");
 		}
 
 		.showcase img {
-			/* height: 100%; */
-			/* max-height: 80vh; */
+    		max-height: unset;
 			display: flex;
 		}
 
 		section.sectors {
     		margin: 0.6rem 0;
+		}
+
+		.locations .image img {
+			border-radius: 24rem 0 0 0;
 		}
 
 		.testimonials::before, .testimonials::after {
