--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -33,6 +33,8 @@ import "../../styles/collections.css"
                 <div class="division" id="indoor">
                     <h2>Indoor cleaning</h2>
 
+                    <p>Achieve spotless floors with our professional cleaning services. Our experts use top-notch equipment and eco-friendly products for deep cleaning and restoration.</p>
+
                     <div class="flex">
                         {
                             services.map((services) => (
@@ -69,6 +71,8 @@ import "../../styles/collections.css"
                 
                 <div class="division" id="external">
                     <h2>External cleaning</h2>
+
+                    <p>Achieve spotless floors with our professional cleaning services. Our experts use top-notch equipment and eco-friendly products for deep cleaning and restoration.</p>
 
                     <div class="flex">
                         {
