--- a/src/styles/collections.css
+++ b/src/styles/collections.css
@@ -18,9 +18,9 @@ h2 {
     background-color: rgb(248 248 255 / 75%);
     position: sticky;
     top: calc(clamp(1rem,16vmin,7.5rem) + 0.1rem);
-    padding: clamp(0.6rem,2vmin,1rem) clamp(1.2rem,4vmin,1.8rem);
+    padding: clamp(0.6rem,2vmin,1rem) 0.8rem 0.4rem 0;
     backdrop-filter: blur(0.3rem);
-    margin: 2rem 0 0.5rem 0.1rem;
+    margin: 2rem 0 0 0.1rem;
     border-radius: 0 0.3rem 0.3rem 0;
     box-shadow: 0 1rem 1rem -0.8rem rgb(248 248 255 / 40%);
     z-index: 2;
