--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,6 +21,12 @@ import { SITE_TITLE, SITE_DESCRIPTION, OG_IMAGE } from "../consts";
     }
 </script> -->
 
+<style>
+    html.sr .reveal {
+        visibility: hidden;
+    }
+</style>
+
 <script src="../scripts/scrollreveal.min.js"></script>
 
 <meta charset="UTF-8" />
