--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -376,12 +376,14 @@ const testimonials = await getCollection("testimonials");
     	gap: 0.2rem;
 		font-weight: 600;
     	font-size: clamp(1.2rem,3.8vmin,1.6rem);
+    	width: fit-content;
 	}
 
 	.intro .bt_ctnr .flex.column a {
 		line-height: 1;
 		padding: 0.5rem;
 		transition: opacity 0.4s ease;
+    	width: fit-content;
 	}
 
 	.intro .bt_ctnr .flex.column a:hover {
