--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -13,6 +13,14 @@ const { title, description } = Astro.props;
 import { SITE_TITLE, SITE_DESCRIPTION, OG_IMAGE } from "../consts";
 ---
 
+<!-- Google Tag Manager -->
+<script is:inline>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WM63TJ4W');</script>
+<!-- End Google Tag Manager -->
+
 <style>
     html.sr .reveal {
         visibility: hidden;
