--- a/src/components/ContactBox.astro
+++ b/src/components/ContactBox.astro
@@ -14,10 +14,10 @@
         London: 020 3411 0275
     </a>
     
-    <a href="tel:+44-0121-3927529" class="tel">
+    <!-- <a href="tel:+44-0121-3927529" class="tel">
         <span class="icon"></span>
         Birmingham: 0121 3927529
-    </a>
+    </a> -->
 
     <!-- <hr>
 
