--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ const sectors = await getCollection("sectors");
 
     <div class="ctnr">
         <a href="tel:+44-020-3411-0275">London: 020 3411 0275</a>
-        <a href="tel:+44-0121-3927529">Birmingham: 0121 3927529</a>
+        <!-- <a href="tel:+44-0121-3927529">Birmingham: 0121 3927529</a> -->
     </div>
 </div>
 
@@ -328,7 +328,7 @@ const sectors = await getCollection("sectors");
         text-align: center;
         box-shadow: inset 0 -1.2rem 2rem -1.8rem #fff;
         transition: filter 0.5s ease;
-		text-shadow: 0 0.1rem 0.4rem var(--dark);
+		text-shadow: 0 0.2rem 0rem rgb(47 54 60 / 38%);
     }
 
     header nav .cta:hover {
@@ -547,7 +547,7 @@ const sectors = await getCollection("sectors");
         .subnav > .flex > a:not(.cta) {
             transition: background-color 0.3s ease;
             padding: 0.8rem clamp(0.6rem, 0.8vw, 1.6rem);
-            text-shadow: 0 0.1rem 0.3rem var(--primary-a);
+            text-shadow: 0 0.2rem 0rem rgb(47 54 60 / 30%);
         }
 
         header nav > .ctnr > a:not(.cta):hover,
