--- a/src/components/MapSwitch.astro
+++ b/src/components/MapSwitch.astro
@@ -12,7 +12,7 @@
             <span class="switch_slider round"></span>
         </div>
 
-        <span class="birmingham">Birmingham</span>
+        <!-- <span class="birmingham">Birmingham</span> -->
     </label>
 </div>
 
