--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -25,9 +25,9 @@ const { description } = Astro.props;
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit molestias quo id molestiae fuga esse nemo perspiciatis.</p>
                 
-                <div class="component_ctnr">
+                <!-- <div class="component_ctnr">
                     <MapSwitch/>
-                </div>
+                </div> -->
             </div>
 
             <div class="map">
