--- a/src/pages/services/[...slug].astro
+++ b/src/pages/services/[...slug].astro
@@ -16,6 +16,8 @@ const services = Astro.props;
 const { Content } = await services.render();
 
 import "../../styles/posts.css"
+
+import { Schema } from "astro-seo-schema"
 ---
 
 <SubpageLayout {...services.data}>
@@ -44,4 +46,25 @@ import "../../styles/posts.css"
     </article>
 
     <ContactSection />
+
+    <Schema
+        item={{
+            "@context": "https://schema.org",
+            "@type": "Article",
+            headline: `${services.data.title} ${String(services.data.title).includes('Cleaning') ? " Service" : "Cleaning Service"}`,
+            image: `${services.data.image}`,
+            "author": [{
+                "@type": "Organization",
+                "name": "The Clean Network"
+            }],
+            "publisher": {
+                "@type": "Organization",
+                "name": "The Clean Network",
+                "logo": {
+                    "@type": "ImageObject",
+                    "url": "/logo/tcn-logo-360.png"
+                }
+            }
+        }}
+    />
 </SubpageLayout>
