--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -16,15 +16,20 @@ const services = (await getCollection('services')).sort((a, b) => {
     }
 });
 
-const { description } = Astro.props;
+const currentURL = new URL(Astro.request.url)
+
+const { title, description } = Astro.props;
 
 import Header from "../../components/Header.astro";
 import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
 import ContactSection from "../../components/ContactSection.astro"
+import BodyGTM from "../../components/BodyGTM.astro";
 
 import "../../styles/subpages.css"
 import "../../styles/collections.css"
+
+import { Schema } from "astro-seo-schema"
 ---
 
 <html lang="en">
@@ -33,6 +38,7 @@ import "../../styles/collections.css"
     </head>
 
     <body>
+        <BodyGTM/>
         <Header />
 
         <main>
@@ -124,5 +130,26 @@ import "../../styles/collections.css"
         <ContactSection />
 
         <Footer />
+
+        <Schema
+            item={{
+                "@context": "https://schema.org",
+                "@type": "LocalBusiness",
+                "name": "Clean Network | Services",
+                "image": "/og/social-image.jpg",
+                "@id": currentURL,
+                "url": currentURL,
+                "telephone": [
+                    "+4402034110275"
+                ],
+                "address": {
+					"@type": "PostalAddress",
+					"streetAddress": "EC1M 4NH",
+					"addressLocality": "London",
+					"addressRegion": "GB",
+					"addressCountry": "UK"
+                }  
+            }}
+        />
     </body>
 </html>
