--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -61,7 +61,7 @@ h2::after {
     font-weight: 400;
     line-height: 1.4;
     font-style: italic;
-    margin-bottom: 1.2rem;
+    margin: 0.5rem 0 1.4rem;
 }
  
 .panel .content .description {
